#39: write and test element and fallback DependencyResolver.